[package]
name = "hedged_staking"
version = "0.0.4"
authors = ["ops@velvetformula.com"]
edition = "2021"
description = "Hedged staking"
license = "All rights reseved (c) Liquorice HQ"

[profile.release]
# Preserve information to unwind it after `panic!()`.
debug=2

[dependencies]
async-recursion = "1.0.0"
clap = { version = "4.0.26", features = ["derive", "string", "cargo"] }
derive_more = "0.99.17"
flexi_logger = { version = "0.22.6", features = ["async", "specfile", "use_chrono_for_offset"] }
html-escape = "0.2.12"
lazy_static = "1.4.0"
log = "0.4.17"
log-panics = { version = "2", features = ["with-backtrace"]}
pause_console = "0.1.3"
prometheus = { version = "0.13.3", features = ["process"] }
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.7.0"
rust_decimal = { version = "1.26.1", features = ["rand"] }
rust_decimal_macros = "1.26.1"
serde = "1.0.147"
strum = "0.24.1"
strum_macros = "0.24.3"
termion = "2.0.1"
tokio = { version = "1.22", features = ["full"] }
toml = "0.5.9"
ureq = { version = "2.5.0", features = ["json"] }
warp = "0.3.3"
openlimits = { git = "ssh://git@github.com/VelvetFormula/openlimits-crypto-com.git", rev="cae96428332b278c03fc83c961c3e0c7c709c024" }

[build-dependencies]
chrono = "0.4"
